Bug 429806 - Highlight place only when it is displayed in file open/save dialogs
Summary: Highlight place only when it is displayed in file open/save dialogs
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: Open/save dialogs (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KIO Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-29 12:46 UTC by Patrick Silva
Modified: 2020-11-30 14:29 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.77
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-11-29 12:46:59 UTC
SUMMARY
This bug is already fixed in Places panel of Dolphin (see bug 156678),
but the Places panels of file open/save dialogs are still affected.

STEPS TO REPRODUCE
1. open Kate
2. type anything
3. press ctrl+s to open the save dialog
4. click on Home in the side bar ("Home" place is highlighted as expected)
5. open any folder in Home

OBSERVED RESULT
"Home" is still highlighted in the Places panel

EXPECTED RESULT
Highlight place only when it is displayed

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.20.80
KDE Frameworks Version: 5.77.0
Qt Version: 5.15.1
Comment 1 Bug Janitor Service 2020-11-30 06:43:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/234
Comment 2 Méven Car 2020-11-30 14:29:37 UTC
Git commit 7817692f3e02d13d8570027d81369635548398c4 by Méven Car.
Committed on 30/11/2020 at 06:42.
Pushed by meven into branch 'master'.

Places view: highlight place only when it is displayed
Related: bug 156678
FIXED-IN: 5.77

M  +6    -1    src/filewidgets/kfileplacesview.cpp

https://invent.kde.org/frameworks/kio/commit/7817692f3e02d13d8570027d81369635548398c4