Places view: highlight place only when it is displayed

BUG: 429806
FIXED-IN: 5.77

CCBUG: 156678